--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         <div class="message">
             <h3>Jheniffer,</h3>
             <p>Amo cada momento que nos passamos juntos. Seu sorriso ilumina meus dias, e sua presença torna minha vida completa. Quero que saiba o quanto você é importante para mim.</p>
-            <p>Feliz aniversário! Que seja a primeira sexta de café da manhã de muitas. Estarei sempre ao seu lado.</p>
+            <p>Feliz aniversário! Que seja a primeira cesta de café da manhã de muitas. Estarei sempre ao seu lado.</p>
             <p>Com todo meu amor,</p>
             <p><strong>Juliano</strong> <span class="heart-beat">❤️</span></p>
         </div>
